# ProgramacionWeb

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/microblog/: config.py  forms.py  models.py  run.py  utils.py
src/microblog/static/css/: styles.css
src/microblog/templates/: 403.html  404.html  500.html  base_template.html  category_posts.html  index.html  login_form.html  post_view.html  user_posts.html
src/microblog/templates/admin/: edit_post_form.html  post_form.html  signup_form.html
src/parcialprimercorte/: run.py
src/parcialprimercorte/templates/: add.html  event_detail.html  index.html  register.html
