[project]
name = "microblog"
version = "0.1.0"
description = "A comprehensive blog application using Flask, PostgreSQL, and modern web technologies"
readme = "README.md"
requires-python = ">=3.12"

[project.dependencies]
python = ">=3.12"
Flask = "^3.1.2"
Flask-WTF = "^1.2.2"
Flask-Login = "^0.6.3"
Flask-SQLAlchemy = "^3.1.1"
psycopg = "^3.2.10"
python-slugify = "^8.0.4"
email-validator = "^2.3.0"
Werkzeug = "^3.1.3"
